[package]
name = "tvilling"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
jwt-simple = "0.10.8"
google-cloud-iot-jwt = "0.1.1"
paho-mqtt = { version = "0.10.0", features = ["vendored-ssl"] }
futures = "0.3.21"
gpio-cdev = { version = "0.5.1", features = ["async-tokio"] }
dotenv = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
color-eyre = "0.6.1"
serde = "1.0.136"
serde_json = "1.0.79"
state_machine_future = "0.2.0"
mockall = "0.11.0"
async-trait = "0.1.52"
chrono = "0.4.19"
